Fix mobile navbar overflow and hamburger menu behaviour

--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -61,7 +61,7 @@
   }
 
   .nav-links {
-    position: absolute;
+    position: fixed;
     top: 70px;
     right: 0;
     background-color: #fff0f5;
